# CustomLLMFineTuning

./: .gitignore  README.md  SETUP_GUIDE.md  alembic.ini  docker-compose.yml  dvc.yaml  pyproject.toml  pytest.ini  requirements.txt  run.py
Data-Pipeline/: .dockerignore  .gitignore  Dockerfile.testenv  README.Docker.md  README.md  docker-compose.testenv.yml  meow.txt  pytest.ini  requirements.txt  run_tests_docker.bat  run_tests_docker.sh
alembic/: env.py
auth/: __init__.py  database.py  dependencies.py  jwt_handler.py  models.py  routes.py  schemas.py
configs/: data_config.yaml  database_config.yaml  model_config.yaml  monitoring_config.yaml  preprocessing_config.yaml  serving_config.yaml
dags/: data_pipeline_dag.py
data/: __init__.py  bias_detection.py  file_handler.py  filtered_metadata_cpp.json  filtered_metadata_java.json  filtered_metadata_javascript.json  filtered_metadata_python.json  gcs_pipeline.py  pipeline.py  preprocessing.py  routes.py  splitter.py
docs/: GCP_SETUP_GUIDE.md
model_development/: .gitignore  README.md  docker-compose.yml  requirements.txt
model_training/: Readme.Md  orchestator.py  pipeline_config_template.json  requirements.txt
monitoring/: __init__.py  docker-compose.monitoring.yml  prometheus.yml
orchestration/: __init__.py  docker-compose.airflow.yml
registry/: __init__.py
reports/: .gitignore
scripts/: __init__.py  anomaly_detection.py  batch_swh_download.py  batch_swh_download_cpp.py  batch_swh_download_java.py  batch_swh_download_javascript.py  batch_swh_download_python.py  bias_analysis.py  data_acquisition.py  (+11 more)
(+160 files in other folders)
